se modifico la nacionalidad

--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="Correo_electronico">
             <i class="fas fa-user"></i> <!-- se usa para el encabezado de la pagina  -->
-            <span>Bryant@correo.com</span> 
+            <span>veneco@correo.com</span> 
         </div>
     </header>
     <div class="contenedor">
