--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="C:\Users\Lara_\OneDrive\Escritorio\ProyectoSGA\Css\men.css">
-    <title>Sistema de Inventario</title>
+    <title>Sistemas de Inventario</title>
 </head>
 <body>
     <header>
